--- a/ci/1030-docker-run/etc/libssh/libssh_client.config
+++ b/ci/1030-docker-run/etc/libssh/libssh_client.config
@@ -1,2 +1,4 @@
+# Parse system-wide crypto configuration file
+Include /usr/etc/crypto-policies/back-ends/libssh.config
 # Parse OpenSSH configuration file for consistency
 Include /usr/etc/ssh/ssh_config
