CI-BOT:2023.10.13-102930-main-487

--- a/ci/1030-docker-run/etc/zypp/zypp.conf
+++ b/ci/1030-docker-run/etc/zypp/zypp.conf
@@ -97,7 +97,7 @@
 ## affected, but reset to their default values.
 ##
 ## A custom repo variable is defined by creating a file inside the
-## directory. The variable name equals the file name. The files fist
+## directory. The variable name equals the file name. The file's first
 ## line (up to but not including the newline character) defines the
 ## variables value.
 ##
