CI-BOT:2023.10.31-011536-main-719

--- a/ci/1030-docker-run/etc/iscsi/iscsid.conf
+++ b/ci/1030-docker-run/etc/iscsi/iscsid.conf
@@ -69,7 +69,7 @@ node.leading_login = No
 # To configure which CHAP algorithms to enable, set
 # node.session.auth.chap_algs to a comma separated list.
 # The algorithms should be listed in order of decreasing
-# preference — in particular, with the most preferred algorithm first.
+# preference - in particular, with the most preferred algorithm first.
 # Valid values are MD5, SHA1, SHA256, and SHA3-256.
 # The default is MD5.
 #node.session.auth.chap_algs = SHA3-256,SHA256,SHA1,MD5
