CI-BOT:2024.03.26-122246-main-1219

--- a/ci/1030-docker-run/etc/zypp/zypper.conf
+++ b/ci/1030-docker-run/etc/zypp/zypper.conf
@@ -8,7 +8,7 @@
 ## and you do not have ~/.zypper.conf yet, use /etc/zypp/zypper.conf
 ## as template (copy it to ~/.zypper.conf) and adjust to your liking.
 ##
-## The options known also to libzypp will be overriden by zypper.conf, if set.
+## The options known also to libzypp will be overridden by zypper.conf, if set.
 ##
 ## Boolean values are:
 ##   0 1 yes no on off true false
@@ -230,7 +230,7 @@
 ## Do highlighting of package lists for easier reading?
 ##
 ## Within the packagelists displayed as transactions summary
-## hightlight the first letter of every package name (all),
+## highlight the first letter of every package name (all),
 ## or only of the first package in each letter group (first).
 ##
 ## Valid values: all/first/no
